# binja_mcp

./: LICENSE  README.md  __init__.py
binja_mcp/: __init__.py  binja_mcp.py  pyproject.toml
plugin/: mcp_plugin.py  tools.py
